--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="1;url=https://cloud-firestore-first-project.web.app/" />
-    <title>Hello World</title>
+    <title>Swasthya App</title>
 </head>
 <body>
     <h1>Redirecting!!</h1>
