--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="1;url=https://cloud-firestore-first-project.web.app/" />
     <title>Swasthya App</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #7cd579;
+            color: white;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Redirecting!!</h1>
+    <div class="container">
+        <h1>Swasthya App</h1>
+        <p>Redirecting!!</p>
+    </div>
 </body>
 </html>
