--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #7cd579;
+            background-color: #006e1c;
             color: white;
             font-family: Arial, sans-serif;
             text-align: center;
@@ -27,7 +27,6 @@
 <body>
     <div class="container">
         <h1>Swasthya App</h1>
-        <p>Redirecting!!</p>
     </div>
 </body>
 </html>
